--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "dependencies": {
     "react-native": "^0.18.1"
+  },
+  "devDependencies": {
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-standard": "^1.3.1"
   }
 }
