--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "es6": true
   },
 
-  "plugins": ["react"],
+  "plugins": ["react","eslint-plugin-react","eslint-plugin-standard"],
 
   "ecmaFeatures": {
     "arrowFunctions": true,
