--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
-    "react-native": "^0.18.1"
+    "react-native": "^0.19.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "eslint": "^1.10.3",
